--- a/fastcamput-board-project/src/main/resources/templates/articles/index.html
+++ b/fastcamput-board-project/src/main/resources/templates/articles/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="header :: header">
+<html lang="ko">
+<head>
     <meta charset="UTF-8">
     <title>게시판 페이지</title>
 </head>
 
 <body>
-    <header>
-        header 삽입부
-        <hr>
-    </header>
+    <header id="header"> </header>
 
     <main>
         <form>
@@ -67,10 +64,7 @@
 
     </main>
 
-    <footer th:replace="footer :: footer">
-        <hr>
-        푸터 삽입부
-    </footer>
+    <footer id="footer"> </footer>
 
 
 
