#17 - 게시판 뷰 템플릿 구현
게시판 뷰 템플릿 구현

--- a/fastcamput-board-project/src/main/resources/templates/articles/index.html
+++ b/fastcamput-board-project/src/main/resources/templates/articles/index.html
@@ -62,8 +62,8 @@
             <tr>
                 <th class="title col-6"><a>제목</a></th>
                 <th class="hashtag col-2"><a>해시태그</a></th>
-                <th class="user-id"><a>작성자</a></th>
-                <th class="created-at"><a>작성일</a></th>
+                <th class="user-id col"><a>작성자</a></th>
+                <th class="created-at col"><a>작성일</a></th>
             </tr>
             </thead>
             <tbody>
